<resources>
    <string name="app_name">Tourista</string>
    <string name="title_activity_places_map">PlacesMapActivity</string>
    <string name="title_places">Places</string>
    <string name="title_map">Map</string>

    <!-- TODO: Remove old strings -->
    <string name="date_field">Date</string>
    <string name="date_field_def">YYYY/MM/DD</string>
    <string name="date_field_template">%1$d/%2$02d/%3$02d</string>
    <string name="time_field">Time</string>
    <string name="time_field_def">12:00 PM</string>
    <string name="time_field_template">%1$d:%2$02d %3$s</string>
    <string name="notes_field">Notes</string>

    <!-- New strings -->
    <string name="dialog_trip_name">Trip Name</string>
    <string name="destination_notes">Notes</string>
    <string name="destination_time">Time</string>
    <string name="destination_date">Date</string>
    <string name="destination_date_format">YYYY/MM/DD</string>
    <string name="destination_time_format">HH:MM</string>
    <string name="text_loading">Loading...</string>
    <string name="destination_name">Place</string>
    <string name="trip_indiv_edit">Edit</string>
    <string name="error_calendar_permission">Calendar integration is not permitted.</string>
    <string name="sharedprefs_calendar">SHARED_PREFS_CALENDAR</string>
    <string name="sharedprefs_calendar_id">SHARED_PREFS_CALENDAR_ID</string>
    <string name="destination_timezone">Time Zone</string>
    <string name="dialog_new_trip_title">Create Trip</string>
    <string name="dialog_edit_trip_title">Edit Trip</string>
    <string name="time_zone_display_name">Display Name</string>
    <string name="time_zone_offset">Offset</string>
    <string name="time_zone_country">Country</string>
    <string name="destination_delete_confirmation">Are you sure you want to delete this destination?</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">CANCEL</string>
    <string name="trips_title">My Trips</string>
    <string name="fragment_my_location">My Location</string>
    <string name="fragment_weather">Weather</string>
    <string name="fragment_currency_converter">Currency Converter</string>
    <string name="fragment_world_clock">World Clock</string>

    <string name="menu_food">Dining</string>
    <string name="menu_hotels">Hotels</string>
    <string name="menu_sights">Sights</string>
    <string name="menu_atm">ATM</string>
    <string name="menu_healthcare">Healthcare</string>
    <string name="menu_shopping">Shopping</string>
    <string name="currency_source">Source Currency</string>
    <string name="currency_amount">Amount</string>
    <string name="currency_dest">Destination Currency</string>
    <string name="currencyConvertButtonText">Convert</string>

</resources>
