<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_food"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:title="@string/menu_food"/>

    <item
        android:id="@+id/menu_sights"
        android:icon="@drawable/ic_landscape_black_24dp"
        android:title="@string/menu_sights"/>

    <item
        android:id="@+id/menu_hotels"
        android:icon="@drawable/ic_hotel_black_24dp"
        android:title="@string/menu_hotels"/>

    <item
        android:id="@+id/menu_atm"
        android:icon="@drawable/ic_monetization_on_black_24dp"
        android:title="@string/menu_atm"/>

    <item
        android:id="@+id/menu_shopping"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/menu_shopping"/>

    <!--<item-->
        <!--android:id="@+id/menu_healthcare"-->
        <!--android:icon="@drawable/ic_local_hospital_black_24dp"-->
        <!--android:title="@string/menu_healthcare"/>-->

</menu>