<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_start"
    app:startDestination="@id/myLocationFragment">

    <fragment
        android:id="@+id/myLocationFragment"
        android:name="com.rjdeleon.tourista.feature.myLocation.MyLocationFragment"
        android:label="@string/fragment_my_location"
        tools:layout="@layout/fragment_my_location" />
    <fragment
        android:id="@+id/currencyConverterFragment"
        android:name="com.rjdeleon.tourista.feature.currencyConverter.CurrencyConverterFragment"
        android:label="@string/fragment_currency_converter"
        tools:layout="@layout/fragment_currency_converter" />
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.rjdeleon.tourista.feature.weather.WeatherFragment"
        android:label="@string/fragment_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/worldClockFragment"
        android:name="com.rjdeleon.tourista.feature.worldClock.WorldClockFragment"
        android:label="@string/fragment_world_clock"
        tools:layout="@layout/fragment_world_clock" />

</navigation>