<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/timeZoneDisplayNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_zone_display_name" />

    <TextView
        android:id="@+id/timeZoneOffsetText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_zone_offset" />

    <TextView
        android:id="@+id/timeZoneCountryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_zone_country" />
</LinearLayout>