<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.rjdeleon.tourista.feature.destination.DestinationViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.destination.DestinationFragment">

        <com.google.android.gms.maps.MapView
            android:id="@+id/destinationMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapPlace="@{viewModel.destination}" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_location_on_black_24dp"/>

                <AutoCompleteTextView
                    android:id="@+id/destinationAutocompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_field_size"
                    android:hint="@string/destination_name"
                    placeText="@{viewModel.destination.name}"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveDestinationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/holo_green_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_check_black_24dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:maxHeight="300dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/destination_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/destinationDateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/destination_date_format"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            dateText="@{viewModel.destination.startTime}"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/destination_time"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/destinationTimeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/destination_time_format"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            timeText="@{viewModel.destination.startTime}"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    -->

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="35dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_access_time_black_24dp" />

                        <TextView
                            android:id="@+id/destinationStartDateText"
                            dateText="@{viewModel.destination.startTime}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/destination_date_format"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/destinationStartTimeText"
                            timeText="@{viewModel.destination.startTime}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/destination_time_format"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/destinationEndDateText"
                            dateText="@{viewModel.destination.endTime}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/destination_date_format"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toBottomOf="@+id/destinationStartDateText" />

                        <TextView
                            android:id="@+id/destinationEndTimeText"
                            timeText="@{viewModel.destination.endTime}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/destination_time_format"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/destinationStartTimeText" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/destination_timezone"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toBottomOf="@+id/destinationEndDateText" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/notesImageView"
                            android:layout_width="35dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="4dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_event_note_black_24dp" />

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:padding="6dp"
                            android:text="@={viewModel.destination.notes}"
                            android:textSize="@dimen/text_field_size"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/notesImageView"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>